--- a/Calcul/Scripts.ipynb
+++ b/Calcul/Scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -114,9 +114,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rakot\\AppData\\Local\\Temp\\ipykernel_920\\2818799601.py:6: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "C:\\Users\\rakot\\AppData\\Local\\Temp\\ipykernel_20460\\2818799601.py:6: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
       "  df[\"week\"] = df[\"created_at\"].dt.to_period('W')\n",
-      "C:\\Users\\rakot\\AppData\\Local\\Temp\\ipykernel_920\\2818799601.py:7: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "C:\\Users\\rakot\\AppData\\Local\\Temp\\ipykernel_20460\\2818799601.py:7: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
       "  df[\"month\"] = df[\"created_at\"].dt.to_period('M')\n"
      ]
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -294,6 +294,8 @@
     "df_final = pd.merge(df2, df1, on='day', how='left')\n",
     "\n",
     "print(df_final.head())\n",
+    "df.drop(columns=['day'], inplace=True)\n",
+    "\n",
     "\n",
     "df_final.to_csv('../Data/data_cleaned_with_analysis.csv', index=False)\n",
     "\n",
