--- a/DataClean/Clean.ipynb
+++ b/DataClean/Clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,19 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            id      screen_name                name                created_at  \\\n",
-      "0  1,72517E+18       gptournier  Guillaume Tournier 2023-11-16 15:13:18+00:00   \n",
-      "1  1,72868E+18       jouanetwan      Jouan Etwan 💚💛 2023-11-26 07:34:34+00:00   \n",
-      "2  1,73784E+18  vince_thouvenin           thouvenin 2023-12-21 14:27:08+00:00   \n",
-      "3  1,74049E+18   BiduleAnatheme     Anathème Bidule 2023-12-28 21:32:58+00:00   \n",
-      "4  1,74068E+18  vince_thouvenin           thouvenin 2023-12-29 10:08:10+00:00   \n",
+      "            id      screen_name                name          created_at  \\\n",
+      "0  1,72517E+18       gptournier  Guillaume Tournier 2023-11-16 15:13:18   \n",
+      "1  1,72868E+18       jouanetwan      Jouan Etwan 💚💛 2023-11-26 07:34:34   \n",
+      "2  1,73784E+18  vince_thouvenin           thouvenin 2023-12-21 14:27:08   \n",
+      "3  1,74049E+18   BiduleAnatheme     Anathème Bidule 2023-12-28 21:32:58   \n",
+      "4  1,74068E+18  vince_thouvenin           thouvenin 2023-12-29 10:08:10   \n",
       "\n",
       "                                           full_text  hour  text_length  \\\n",
       "0  ENGIEpartFR n6 mois dattente et tjs aucune ré...    15          282   \n",
@@ -117,6 +117,8 @@
     "\n",
     "df['created_at'] = pd.to_datetime(df['created_at'], errors='coerce', utc=True)\n",
     "\n",
+    "df['created_at'] = df['created_at'].dt.tz_convert(None)\n",
+    "\n",
     "df['hour'] = df['created_at'].dt.hour\n",
     "\n",
     "df['text_length'] = df['full_text'].apply(len)\n",
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
