--- a/Calcul/Scripts.ipynb
+++ b/Calcul/Scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,26 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            id      screen_name                name  \\\n",
-      "0  1,72517E+18       gptournier  Guillaume Tournier   \n",
-      "1  1,72868E+18       jouanetwan      Jouan Etwan 💚💛   \n",
-      "2  1,73784E+18  vince_thouvenin           thouvenin   \n",
-      "3  1,74049E+18   BiduleAnatheme     Anathème Bidule   \n",
-      "4  1,74068E+18  vince_thouvenin           thouvenin   \n",
-      "\n",
-      "                  created_at  \\\n",
-      "0  2023-11-16 15:13:18+00:00   \n",
-      "1  2023-11-26 07:34:34+00:00   \n",
-      "2  2023-12-21 14:27:08+00:00   \n",
-      "3  2023-12-28 21:32:58+00:00   \n",
-      "4  2023-12-29 10:08:10+00:00   \n",
+      "            id      screen_name                name           created_at  \\\n",
+      "0  1,72517E+18       gptournier  Guillaume Tournier  2023-11-16 15:13:18   \n",
+      "1  1,72868E+18       jouanetwan      Jouan Etwan 💚💛  2023-11-26 07:34:34   \n",
+      "2  1,73784E+18  vince_thouvenin           thouvenin  2023-12-21 14:27:08   \n",
+      "3  1,74049E+18   BiduleAnatheme     Anathème Bidule  2023-12-28 21:32:58   \n",
+      "4  1,74068E+18  vince_thouvenin           thouvenin  2023-12-29 10:08:10   \n",
       "\n",
       "                                           full_text  hour  text_length  \\\n",
       "0  ENGIEpartFR n6 mois dattente et tjs aucune ré...    15          282   \n",
@@ -56,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -109,16 +102,6 @@
       "2025-03     6\n",
       "Freq: M, dtype: int64\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rakot\\AppData\\Local\\Temp\\ipykernel_20460\\2818799601.py:6: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
-      "  df[\"week\"] = df[\"created_at\"].dt.to_period('W')\n",
-      "C:\\Users\\rakot\\AppData\\Local\\Temp\\ipykernel_20460\\2818799601.py:7: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
-      "  df[\"month\"] = df[\"created_at\"].dt.to_period('M')\n"
-     ]
     }
    ],
    "source": [
@@ -142,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +189,6 @@
     "def contient_mots_cles(tweet):\n",
     "    return any(mot in tweet.lower() for mot in mots_cles)\n",
     "\n",
-    "# Appliquer la fonction pour détecter les tweets avec des mots-clés critiques\n",
     "df[\"tweet_critique\"] = df[\"full_text\"].apply(contient_mots_cles)\n",
     "\n",
     "tweets_critique_par_jour = df.groupby(\"day\")[\"tweet_critique\"].sum()\n",
@@ -216,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,73 +215,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision 714eb0f (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
+      "All PyTorch model weights were used when initializing TFDistilBertForSequenceClassification.\n",
+      "\n",
+      "All the weights of TFDistilBertForSequenceClassification were initialized from the PyTorch model.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFDistilBertForSequenceClassification for predictions without further training.\n",
+      "Device set to use 0\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['id', 'screen_name', 'name', 'created_at', 'full_text', 'hour',\n",
-      "       'text_length', 'contains_engie'],\n",
-      "      dtype='object')\n",
-      "Index(['day', 'tweets_par_jour', 'tweets_par_semaine', 'tweets_par_mois',\n",
-      "       'mentions_engie_par_jour', 'tweets_critique_par_jour'],\n",
-      "      dtype='object')\n",
-      "            id      screen_name                name                created_at  \\\n",
-      "0  1,72517E+18       gptournier  Guillaume Tournier 2023-11-16 15:13:18+00:00   \n",
-      "1  1,72868E+18       jouanetwan      Jouan Etwan 💚💛 2023-11-26 07:34:34+00:00   \n",
-      "2  1,73784E+18  vince_thouvenin           thouvenin 2023-12-21 14:27:08+00:00   \n",
-      "3  1,74049E+18   BiduleAnatheme     Anathème Bidule 2023-12-28 21:32:58+00:00   \n",
-      "4  1,74068E+18  vince_thouvenin           thouvenin 2023-12-29 10:08:10+00:00   \n",
-      "\n",
-      "                                           full_text  hour  text_length  \\\n",
-      "0  ENGIEpartFR n6 mois dattente et tjs aucune ré...    15          282   \n",
-      "1  Bonjour ENGIEpartSAV , lappli monpilotageelec ...     7          155   \n",
-      "2  ENGIEpartFR mon syndic de copropriété sergic...    14          219   \n",
-      "3  ENGIEpartSAV vous envisagez de vous occuper de...    21          267   \n",
-      "4  ENGIEpartSAV retour de votre technicien vous n...    10          240   \n",
-      "\n",
-      "   contains_engie         day  tweets_par_jour  tweets_par_semaine  \\\n",
-      "0            True  2023-11-16                1                   0   \n",
-      "1            True  2023-11-26                1                   0   \n",
-      "2            True  2023-12-21                1                   0   \n",
-      "3            True  2023-12-28                1                   0   \n",
-      "4            True  2023-12-29                4                   0   \n",
-      "\n",
-      "   tweets_par_mois  mentions_engie_par_jour  tweets_critique_par_jour  \n",
-      "0                0                        1                         0  \n",
-      "1                0                        1                         0  \n",
-      "2                0                        1                         1  \n",
-      "3                0                        1                         0  \n",
-      "4                0                        4                         0  \n",
-      "Les résultats ont été ajoutés et sauvegardés dans 'data_cleaned_with_analysis.csv'.\n"
+      "Positifs: 26\n",
+      "Négatifs: 550\n",
+      "Neutres: 0\n"
      ]
     }
    ],
    "source": [
+    "from transformers import pipeline\n",
     "\n",
-    "df1 = pd.read_csv('resultats_analyse_tweets.csv')\n",
-    "df2 = pd.read_csv('../Data/data_cleaned.csv')\n",
+    "# Charger le pipeline d'analyse de sentiment\n",
+    "sentiment_analyzer = pipeline(\"sentiment-analysis\")\n",
     "\n",
-    "print(df2.columns)\n",
-    "print(df1.columns)\n",
+    "# Appliquer l'analyse de sentiment à chaque tweet\n",
+    "df['sentiment'] = df['full_text'].apply(lambda x: sentiment_analyzer(x)[0]['label'])\n",
     "\n",
-    "df2[\"created_at\"] = pd.to_datetime(df2[\"created_at\"], errors=\"coerce\")\n",
-    "df2[\"day\"] = df2[\"created_at\"].dt.date\n",
+    "# Classer les tweets en catégories Positif, Négatif, Neutre\n",
+    "df['sentiment_class'] = df['sentiment'].apply(lambda x: 'Positif' if x == 'POSITIVE' else ('Négatif' if x == 'NEGATIVE' else 'Neutre'))\n",
     "\n",
-    "df2[\"day\"] = pd.to_datetime(df2[\"day\"]).dt.date\n",
-    "df1[\"day\"] = pd.to_datetime(df1[\"day\"]).dt.date\n",
+    "df.to_csv('../Data/data_cleaned_with_analysis.csv', index=False)\n",
     "\n",
-    "df_final = pd.merge(df2, df1, on='day', how='left')\n",
+    "# Classer les tweets en catégories Positif, Négatif, Neutre\n",
+    "positive_tweets = df[df['sentiment'] == 'POSITIVE']\n",
+    "negative_tweets = df[df['sentiment'] == 'NEGATIVE']\n",
+    "neutral_tweets = df[df['sentiment'] == 'NEUTRAL']\n",
     "\n",
-    "print(df_final.head())\n",
-    "df.drop(columns=['day'], inplace=True)\n",
-    "\n",
-    "\n",
-    "df_final.to_csv('../Data/data_cleaned_with_analysis.csv', index=False)\n",
-    "\n",
-    "print(\"Les résultats ont été ajoutés et sauvegardés dans 'data_cleaned_with_analysis.csv'.\")"
+    "# Affichage de la répartition des sentiments\n",
+    "print(f\"Positifs: {len(positive_tweets)}\")\n",
+    "print(f\"Négatifs: {len(negative_tweets)}\")\n",
+    "print(f\"Neutres: {len(neutral_tweets)}\")\n"
    ]
   }
  ],
